<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Define layout text -->
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    
    <string name="textdefault">0</string>
    
    <string name="clear">C</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiple">x</string>
	<string name="divide">÷</string>
	<string name="equals">=</string>
	<string name="sqrt">√</string>
	<string name="dot">.</string>
	    
	<string name="colorchange">Change color!</string>
</resources>
